--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,10 @@
         <meta name="description" conten="">
         <title>Network viz</title>
         <!-- Bootstrap -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <!--<link rel="stylesheet" href="/static/css/bootstrap.min.css">-->
         <!-- customization -->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/static/css/vis-network.min.css">
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
         <div class="container">
@@ -18,8 +19,9 @@
             </div>
         </div>
         <!-- External libraries -->
-        <script src="js/d3.min.js"></script>
+        <script src="/static/js/d3.min.js"></script>
+        <script src="/static/js/vis.min.js"></script>
         <!-- custom -->
-        <script src="js/main.js"></script>
+        <script src="/static/js/main.js"></script>
     </body>
 </html>
