--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,7 @@
         <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
-        <div class="container">
-            <div class="row">
-                <div id="chart-area">
-
-                </div>
-            </div>
-        </div>
+        <div id="chart-area"></div>
         <!-- External libraries -->
         <script src="/static/js/d3.min.js"></script>
         <script src="/static/js/vis.min.js"></script>
